조회수 변경

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 
       <h1 data-toc-skip>{{ page.title }}</h1>
       <div style="text-align: right;">
-        <img src="https://views.whatilearened.today/views/github/{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url | remove: '/' }}.svg" />
+        <img src="https://views.whatilearened.today/views/github/{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}/{{ page.url | remove: '/' }}.svg" />
       </div>
 
       <div class="post-meta text-muted d-flex flex-column">
